# datadog-cpp

./: CMakeLists.txt  rpm.spec.in
include/: datadog-c.h
src/: c_wrapper.cpp  datadog-c.cpp  datadog-cpp.cpp
